--- a/combinacion.html
+++ b/combinacion.html
@@ -35,12 +35,12 @@
       <!--  <a href="index.html" class="popup__close">&times;</a>-->
       <div class="titulo-g mxwd">Catálogo Virtual</div>
         <div class="tab-container">
-            <a href="#panel-one" class="tab is-active" data-tab="tab-1"><i class="material-icons">dashboard</i>Tortas</a>
-            <a href="#panel-two" class="tab" data-tab="tab-2"><i class="material-icons">events</i>Especiales</a>
-            <a href="#panel-three" class="tab" data-tab="tab-3"><i class="material-icons">settings</i>Cupcakes</a>
-            <a href="#panel-three" class="tab" data-tab="tab-4"><i class="material-icons">settings</i><div class="flxx"> <div> After</div><div> Effects</div></div> </a>
-            <a href="#panel-four" class="tab" data-tab="tab-5"><i class="material-icons">settings</i> <div class="flxx"> <div> Redes</div><div> Sociales</div></div></a>
-            <a href="#panel-four" class="tab" data-tab="tab-6"><i class="material-icons">settings</i><div class="flxx"> <div> Kits</div><div> Premium</div></div></a>
+            <a href="#panel-one" class="tab is-active" data-tab="tab-1"> <img class="icon-men" src="./icono/torta.svg" alt="">  Tortas</a>
+            <a href="#panel-two" class="tab" data-tab="tab-2"> <img class="icon-men" src="./icono/contratos.svg" alt=""> Especiales</a>
+            <a href="#panel-three" class="tab" data-tab="tab-3"><img class="icon-men" src="./icono/postres.svg" alt="">Postres</a>
+            <a href="#panel-three" class="tab" data-tab="tab-4"><img class="icon-men" src="./icono/cupcakes.svg" alt=""><div class="flxx"> <div> Cupcakes</div></div> </a>
+            <a href="#panel-four" class="tab" data-tab="tab-5"><img class="icon-men" src="./icono/dulce.svg" alt=""> <div class="flxx"><div> Dulces</div></div></a>
+            <a href="#panel-four" class="tab" data-tab="tab-6"><img class="icon-men" src="./icono/salados.svg" alt=""><div class="flxx">   <div> Salados</div></div></a>
         </div>
         <div class="tab-content is-active" id="tab-1">
             <div class="container mxwd">
