--- a/coco.html
+++ b/coco.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cocktel de Frutas</title>
+    <title>Coco</title>
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="test.css">
     <link rel="stylesheet" href="steps.css">
@@ -33,19 +33,20 @@
 </header>
     <div  class="principall overf gris-f ">
       <!--  <a href="index.html" class="popup__close">&times;</a>-->
-    <div class="titulo-g mxwd"><a href="combinacion.html">Catálogo Virtual</a> /Cocktel de Frutas </div>
+    <div class="titulo-g mxwd"><a href="combinacion.html">Catálogo Virtual</a> /Coco </div>
             <div class="container mxwd fllex pd10">
               <div class="prodct">
-                <img class="img-prd" src="./cock.webp" alt="">
+                <img class="img-prd" src="./coco.webp" alt="">
               </div>
               <div class="prodct flex-prd">
-                <h3>Cocktel de frutas</h3>
+                <h3>Coco</h3>
                 <div class="descr-prd">
                 <p>
-                  Keke de vainilla con relleno de manjar en la primera 
-                  capa y en la segunda capa con frutas (uva, pera, durazno 
-                  y cereza bañado en chantilly, empastado con mil hojas.
-                  </p>
+                  keke de vainilla humedecido con dulce de coco, relleno
+                  de crema de coco, bañado de chantilly 
+                  empastado con cocada
+                    
+                </p>
               </div>
                   <div>
                     <p class="bo">Selecciona el tamaño</p>
@@ -454,7 +455,7 @@ var btntxt = $(this).text();
 var copy = $(this).parent().find('.copy').text();
 
 var $temp = $("<input>");
-$("body").append($temp);
+$("body").append($temp); 
 $temp.val(copy).select();
 document.execCommand("copy");
 $temp.remove();
