--- a/dulzuralucuma.html
+++ b/dulzuralucuma.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cocktel de Frutas</title>
+    <title>Dulzura de Lúcuma</title>
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="test.css">
     <link rel="stylesheet" href="steps.css">
@@ -33,23 +33,24 @@
 </header>
     <div  class="principall overf gris-f ">
       <!--  <a href="index.html" class="popup__close">&times;</a>-->
-    <div class="titulo-g mxwd"><a href="combinacion.html">Catálogo Virtual</a> /Cocktel de Frutas </div>
+    <div class="titulo-g mxwd"><a href="combinacion.html">Catálogo Virtual</a>/Dulzura de Lúcuma</div>
             <div class="container mxwd fllex pd10">
               <div class="prodct">
-                <img class="img-prd" src="./cock.webp" alt="">
+                <img class="img-prd" src="./dulzuralucuma.webp" alt="">
               </div>
               <div class="prodct flex-prd">
-                <h3>Cocktel de frutas</h3>
+                <h3>Dulzura de Lúcuma</h3>
                 <div class="descr-prd">
                 <p>
-                  Keke de vainilla con relleno de manjar en la primera 
-                  capa y en la segunda capa con frutas (uva, pera, durazno 
-                  y cereza bañado en chantilly, empastado con mil hojas.
+                
+Keke de chocolate humedecido con dulcerío de las tres
+ leches con una capa de mouse de lúcuma y manjar fino,
+  bañado con crema chantilly de lúcuma, polveado de canela. 
                   </p>
               </div>
                   <div>
                     <p class="bo">Selecciona el tamaño</p>
-                    <select id="tmnSelect-chantillyfruta" class="select">
+                    <select id="tmnSelect-treslechesdesabores" class="select">
                       <option value="3">Grande</option>
                       <option value="1">Pequeño</option>
                       <option value="2">Mediano</option>
@@ -58,7 +59,7 @@
                 </div>
                 <div>
                   <p class="bo">Precio total</p>
-                  <p id="precioSelecte" class="t-precio">S/ 55.00</p>
+                  <p id="precioSelected" class="t-precio">S/ 63.00</p>
                 </div>
                 <div class="botones-prd">
                   <a href="#paso" class="prodcomprar flex-centr">Ordenar ahora</a>
