--- a/manjar.html
+++ b/manjar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cocktel de Frutas</title>
+    <title>Manjar</title>
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="test.css">
     <link rel="stylesheet" href="steps.css">
@@ -33,23 +33,24 @@
 </header>
     <div  class="principall overf gris-f ">
       <!--  <a href="index.html" class="popup__close">&times;</a>-->
-    <div class="titulo-g mxwd"><a href="combinacion.html">Catálogo Virtual</a> /Cocktel de Frutas </div>
+    <div class="titulo-g mxwd"><a href="combinacion.html">Catálogo Virtual</a> /Manjar </div>
             <div class="container mxwd fllex pd10">
               <div class="prodct">
-                <img class="img-prd" src="./cock.webp" alt="">
+                <img class="img-prd" src="./manjar.webp" alt="">
               </div>
               <div class="prodct flex-prd">
-                <h3>Cocktel de frutas</h3>
+                <h3>Manjar</h3>
                 <div class="descr-prd">
                 <p>
-                  Keke de vainilla con relleno de manjar en la primera 
-                  capa y en la segunda capa con frutas (uva, pera, durazno 
-                  y cereza bañado en chantilly, empastado con mil hojas.
-                  </p>
+            
+Keke de vainilla con relleno de manjar fino y chantilly,
+ humedecido con almibar especial de la casa, decorado con
+  chantilly cerezas y filigrama. 
+                </p>
               </div>
                   <div>
                     <p class="bo">Selecciona el tamaño</p>
-                    <select id="tmnSelect-chantillyfruta" class="select">
+                    <select id="tmnSelect" class="select">
                       <option value="3">Grande</option>
                       <option value="1">Pequeño</option>
                       <option value="2">Mediano</option>
@@ -58,7 +59,7 @@
                 </div>
                 <div>
                   <p class="bo">Precio total</p>
-                  <p id="precioSelecte" class="t-precio">S/ 55.00</p>
+                  <p id="precioSelect" class="t-precio">S/ 50.00</p>
                 </div>
                 <div class="botones-prd">
                   <a href="#paso" class="prodcomprar flex-centr">Ordenar ahora</a>
@@ -454,7 +455,7 @@ var btntxt = $(this).text();
 var copy = $(this).parent().find('.copy').text();
 
 var $temp = $("<input>");
-$("body").append($temp);
+$("body").append($temp); 
 $temp.val(copy).select();
 document.execCommand("copy");
 $temp.remove();
