--- a/maracuya.html
+++ b/maracuya.html
@@ -33,23 +33,23 @@
 </header>
     <div  class="principall overf gris-f ">
       <!--  <a href="index.html" class="popup__close">&times;</a>-->
-    <div class="titulo-g mxwd"><a href="combinacion.html">Catálogo Virtual</a> /Cocktel de Frutas </div>
+    <div class="titulo-g mxwd"><a href="combinacion.html">Catálogo Virtual</a> /Maracuya </div>
             <div class="container mxwd fllex pd10">
               <div class="prodct">
-                <img class="img-prd" src="./cock.webp" alt="">
+                <img class="img-prd" src="./maracuya.webp" alt="">
               </div>
               <div class="prodct flex-prd">
-                <h3>Cocktel de frutas</h3>
+                <h3>Maracuya</h3>
                 <div class="descr-prd">
                 <p>
-                  Keke de vainilla con relleno de manjar en la primera 
-                  capa y en la segunda capa con frutas (uva, pera, durazno 
-                  y cereza bañado en chantilly, empastado con mil hojas.
-                  </p>
+    Keke de vainilla con dos capas de mousse de maracuya
+    y una capa de manjar fino, bañado con chantilly de 
+    maracuya. 
+               </p>
               </div>
                   <div>
                     <p class="bo">Selecciona el tamaño</p>
-                    <select id="tmnSelect-chantillyfruta" class="select">
+                    <select id="tmnSelect" class="select">
                       <option value="3">Grande</option>
                       <option value="1">Pequeño</option>
                       <option value="2">Mediano</option>
@@ -58,7 +58,7 @@
                 </div>
                 <div>
                   <p class="bo">Precio total</p>
-                  <p id="precioSelecte" class="t-precio">S/ 55.00</p>
+                  <p id="precioSelect" class="t-precio">S/ 50.00</p>
                 </div>
                 <div class="botones-prd">
                   <a href="#paso" class="prodcomprar flex-centr">Ordenar ahora</a>
